--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
@@ -23,7 +23,7 @@
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipo_Persona'] = $('#IdTipo_Persona').val(); }";
     })
     .BindList(new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad == 0 ? "" : Model.IdEntidad);
+    .Bind(Model.IdEntidad);
 
 }
 @comboBox.GetHtml()
