--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbPersona_ConciliacionCaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_CmbPersona_ConciliacionCaja.cshtml
@@ -10,7 +10,7 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.TextFormatString = "[{0}] {1} {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
 
@@ -24,7 +24,7 @@
     .BindList(new Core.Erp.Web.Areas.Caja.Controllers.ConciliacionCajaController().get_list_bajo_demanda,
     new Core.Erp.Web.Areas.Caja.Controllers.ConciliacionCajaController().get_info_bajo_demanda)
     //.BindList(ViewBag.lst_persona)
-    .Bind(Model.IdEntidad == 0 ? "" : Model.IdEntidad);
+    .Bind(Model.IdEntidad);
 
 }
 @comboBox.GetHtml()
