--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -433,10 +433,17 @@
 
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_producto_x_bodega">
                 <div class="row">
-                    @Html.Action("GridViewPartial_producto_por_bodega")
+                    <div class="col-md-12">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_producto_por_bodega")
 
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+          
         </div>
     </div>
 
