--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/INV_003.cshtml
@@ -175,7 +175,7 @@
     });
 
     function cargar_bodega() {
-        $("#IdBodega").val();
+        $("#IdBodega").empty();
 
         var sucursal = $("#IdSucursal").val();
 
