--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_CmbPersona_DebitoBanco.cshtml
@@ -10,7 +10,7 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
-        settings.Properties.TextFormatString = "{1}";
+        settings.Properties.TextFormatString = " [{0}] {1} {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
@@ -23,7 +23,7 @@
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdTipo_Persona'] = $('#IdTipo_Persona').val(); }";
     })
     .BindList(new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Banco.Controllers.NotaDeDebitoBancoController().get_info_bajo_demanda)
-    .Bind(Model.IdEntidad);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Banco.ba_Cbte_Ban_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
