--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbCliente_Proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbCliente_Proforma.cshtml
@@ -13,14 +13,14 @@
         settings.Properties.TextFormatString = "[{0}] {1} - {2}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
-
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_cedulaRuc", "RUC", 20);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 70);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demanda)
-    .Bind(Model.IdCliente);
+    .Bind(Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_proforma_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
 @comboBox.GetHtml()
