--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -34,7 +34,7 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = "";
+            e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto"] = "IVA0";
             e.NewValues["pd_cantidad"] = "";
             e.NewValues["pd_precio"] = "";
