--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -238,7 +238,7 @@
                     <div class="col-md-9">
                         <div class="form-group">
                             <label for="IdEntidad">Beneficiario:*</label>
-                            @Html.Partial("_CmbPersona_DebitoBanco", Model)
+                            @Html.Partial("_CmbPersona_DebitoBanco", Model.IdEntidad)
                             @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                         </div>
                     </div>
