--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
@@ -34,7 +34,7 @@
         //Funcion para inicializar fila al presionar nuevo
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["IdProducto"] = "";
+            e.NewValues["IdProducto"] = 0;
             e.NewValues["IdCod_Impuesto_Iva"] = "IVA0";
             e.NewValues["vt_cantidad"] = "";
             e.NewValues["vt_Precio"] = "";
