--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbProducto_Proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbProducto_Proforma.cshtml
@@ -22,6 +22,6 @@
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_list_bajo_demandaProducto,
-    new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demandaProducto).Bind(Model);
+    new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demandaProducto).Bind((Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_proforma_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Facturacion.fa_proforma_det_Info>)) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
