--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/_GridViewPartial_producto_por_bodega.cshtml
@@ -60,7 +60,13 @@
                 p.Width = Unit.Percentage(100);
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Stock_minimo";
+            column.Caption = "Stock minimo";
+            column.Width = Unit.Percentage(15);
 
+        });
     });
     if (ViewData["EditError"] != null){
         grid.SetEditErrorText((string)ViewData["EditError"]);
