--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
@@ -213,6 +213,17 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
+                <div class="alert alert-warning alert-dismissible" id="divMensaje" hidden>
+                    <h4>
+                        <i class="icon fa fa-warning"></i> <label id="txtMensaje">MENSAJE</label>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
                 @Html.Action("GridViewPartial_factura_det")
             </div>
         </div>
@@ -228,6 +239,7 @@
 }
 <script>
     $(function () {
+        ValidarGrid();
         //Date picker
         $('#vt_fecha').datepicker({
             autoclose: true
@@ -460,5 +472,29 @@ function CargarCuotas() {
             });
             GridView_factura_cuotas.PerformCallback();
     }
-
+    function ValidarGrid() {
+        var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ValidarGrid", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#txtMensaje").text(data);
+                if (data.length > 0) {
+                    $("#divMensaje").show();
+                } else {
+                    $("#divMensaje").hide();
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
