--- a/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/_GridViewPartial_departamento.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/_GridViewPartial_departamento.cshtml
@@ -2,9 +2,9 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_estadocierre";
-        settings.CallbackRouteValues = new { Controller = "EstadoCierreCompras", Action = "GridViewPartial_estadocierre" };
-        settings.KeyFieldName = "IdEstado_cierre";
+        settings.Name = "GridView_departamento";
+        settings.CallbackRouteValues = new { Controller = "DepartamentoCompras", Action = "GridViewPartial_departamento" };
+        settings.KeyFieldName = "IdDepartamento";
         settings.Width = Unit.Percentage(100);
 
         //CConfiguracion responsive
@@ -47,7 +47,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("estado")) == "I")
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -57,11 +57,11 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "estado")) == "A")
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEstado_cierre = DataBinder.Eval(tc.DataItem, "IdEstado_cierre") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEstado_cierre = DataBinder.Eval(tc.DataItem, "IdEstado_cierre")},
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdDepartamento = DataBinder.Eval(tc.DataItem, "IdDepartamento") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -77,9 +77,9 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdEstado_cierre", "Código").Width = Unit.Percentage(10);
-        settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(70);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdDepartamento", "Código").Width = Unit.Percentage(10);
+        settings.Columns.Add("nom_departamento", "Descripción").Width = Unit.Percentage(10);
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
     });
 }
 @grid.Bind(Model).GetHtml()
