--- a/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Compras.com_estado_cierre_Info
 @{
-    ViewBag.Title = "Nuevo catálogo";
+    ViewBag.Title = "Nuevo estado";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
